@@ -1,4 +1,6 @@
 Verion 0.9.44dev (?? ??? 2004)
+  - Fixed bug 920796: printer friendly versions of Views were always showing
+    the current date
   - Fixed bug 921557: warnings about invalid parameter for localtime().
   - Fixed bug 919038: category selecting was not working when viewing
     another user's calendar.
